<resources>
    <string name="app_name">Supple</string>
    <string name="app_motto">Send Money Free of Charge</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">My Account</string>
    <string name="menu_update">Update App</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="mobile_money">Mobile Money</string>
    <string name="bank">Banks</string>

    <string name="back">Go Back</string>
    <string name="top_up">Top Up</string>
    <string name="transfer">Transfer</string>
    <string name="exchange">Exchange</string>
    <string name="request">Request</string>
    <string name="pay">Pay</string>
    <string name="search">Search</string>
    <string name="notification">Notifications</string>
    <string name="more">More</string>

</resources>
