<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />
    </group>
    <item android:title="communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_update_black_24dp"
                android:title="@string/menu_update" />
        </menu>
    </item>
    <item android:title="Leaving">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_lock_black_24dp"
                android:title="@string/menu_logout" />
        </menu>

    </item>
</menu>